--- a/control
+++ b/control
@@ -1,10 +1,11 @@
 Package: dev.traurige.batterybuddy
 Name: BatteryBuddy
-Depends: firmware (>= 13.0), mobilesubstrate, preferenceloader
+Depends: firmware (>= 15.0), mobilesubstrate, preferenceloader
 Conflicts: love.litten.batterybuddy
-Version: 1.3.5
+Version: 1.4
 Architecture: iphoneos-arm
 Description: Battery indicator, but cute
-Maintainer: Traurige <hello@traurige.dev>
+Maintainer: zSaaiq <kevin.felix90@gmx.de>
 Author: Traurige & neilsardesai <hello@traurige.dev>
 Section: Tweaks
+Icon: https://zsaaiq.github.io/jailbreakrepo/images/BatteryBuddy.png
